@@ -452,6 +452,13 @@ __asm__(".symver qpol_policy_open_from_memory_opt,qpol_policy_open_from_memory@V
 __asm__(".symver qpol_policy_rebuild_old,qpol_policy_rebuild@");
 __asm__(".symver qpol_policy_rebuild_opt,qpol_policy_rebuild@@VERS_1.3");
 
+/**
+ * @brief Internal version of qpol_policy_rebuild() version 1.3
+ *
+ * Implementation of the exported function qpol_policy_rebuild()
+ * for version 1.3; this symbol name is not exported.
+ * @see qpol_policy_rebuild()
+ */
 int qpol_policy_rebuild_opt(qpol_policy_t * policy, const int options)
 {
 	sepol_policydb_t *old_p = NULL;
@@ -525,6 +532,11 @@ int qpol_policy_rebuild_opt(qpol_policy_t * policy, const int options)
 	return STATUS_ERR;
 }
 
+/**
+ * @brief Internal version of qpol_policy_rebuild() version 1.2 or earlier
+ * @deprecated use the 1.3 version.
+ * @see qpol_policy_rebuild()
+ */
 int qpol_policy_rebuild_old(qpol_policy_t * policy)
 {
 	if (!policy) {
@@ -546,6 +558,13 @@ int qpol_policy_rebuild_old(qpol_policy_t * policy)
 	return qpol_policy_rebuild_opt(policy, policy->options);
 }
 
+/**
+ * @brief Internal version of qpol_policy_open_from_file() version 1.3
+ *
+ * Implementation of the exported function qpol_policy_open_from_file()
+ * for version 1.3; this symbol name is not exported.
+ * @see qpol_policy_open_from_file()
+ */
 int qpol_policy_open_from_file_opt(const char *path, qpol_policy_t ** policy, qpol_callback_fn_t fn, void *varg, const int options)
 {
 	int error = 0, retv = -1;
@@ -709,6 +728,13 @@ int qpol_policy_open_from_file_no_rules(const char *path, qpol_policy_t ** polic
 	return qpol_policy_open_from_file_opt(path, policy, fn, varg, QPOL_POLICY_OPTION_NO_RULES);
 }
 
+/**
+ * @brief Internal version of qpol_policy_open_from_memory() version 1.3
+ *
+ * Implementation of the exported function qpol_policy_open_from_memory()
+ * for version 1.3; this symbol name is not exported.
+ * @see qpol_policy_open_from_memory()
+ */
 int qpol_policy_open_from_memory_opt(qpol_policy_t ** policy, const char *filedata, size_t size, qpol_callback_fn_t fn, void *varg, const int options)
 {
 	int error = 0;
@@ -776,11 +802,21 @@ int qpol_policy_open_from_memory_opt(qpol_policy_t ** policy, const char *fileda
 
 }
 
+/**
+ * @brief Internal version of qpol_policy_open_from_file() version 1.2 or earlier
+ * @deprecated use the 1.3 version.
+ * @see qpol_policy_open_from_file()
+ */
 int qpol_policy_open_from_file_old(const char *path, qpol_policy_t ** policy, qpol_callback_fn_t fn, void *varg)
 {
 	return qpol_policy_open_from_file(path, policy, fn, varg, 0);
 }
 
+/**
+ * @brief Internal version of qpol_policy_open_from_memory() version 1.2 or earlier
+ * @deprecated use the 1.3 version.
+ * @see qpol_policy_open_from_memory()
+ */
 int qpol_policy_open_from_memory_old(qpol_policy_t ** policy, const char *filedata, size_t size, qpol_callback_fn_t fn, void *varg)
 {
 	return qpol_policy_open_from_memory_opt(policy,filedata, size, fn, varg, 0);
